[package]
name = "cardmod_lib"
version = "1.0.0"
authors = ["iamnande"]
edition = "2021"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

# // SERVER STUFF //
# futures = { version = "0.3" }
# serde_json = { version = "1.0.64" }
# tokio = { version = "1", features = ["full"] }
# hyper = { version = "0.14", features = ["full"] }